# open-web-codex

./: .gitignore  AGENTS.md  LICENSES.md  Makefile  README.md
.codex/: AGENTS.md
apps/web/: .eslintrc.cjs  AGENTS.md  Cargo.toml  README.md  flake.nix  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/web/.github/workflows/: ci.yml
apps/web/browser/: browser-entry.ts  client.test.ts  client.ts  session-gate.css  session.ts  types.ts
apps/web/browser/browser/: core.test.ts  core.ts  dialog.ts  dictation.ts  dpi.ts  liquidGlass.ts  menu.ts  opener.ts  updater.ts  webview.ts  window.ts
apps/web/contracts/codex/: README.md  capability-ids.v1.json  capability-manifest.schema.json  contract-bundle.schema.json  error.schema.json  protocol-fixture.schema.json
apps/web/contracts/codex/fixtures/: capability-manifest.v1.json  protocol.unknown-methods.protocol.json  provider-catalog.success.protocol.json
apps/web/contracts/codex/policy/: README.md  feature-policy.v1.json
apps/web/crates/approval-service/: Cargo.toml
apps/web/crates/approval-service/src/: lib.rs
apps/web/crates/auth/: Cargo.toml
apps/web/crates/auth/src/: lib.rs
apps/web/crates/codex-adapter/: Cargo.toml
apps/web/crates/codex-adapter/src/: fake.rs  lib.rs  real.rs
apps/web/crates/codex-contracts/: Cargo.toml
apps/web/crates/git-runtime/: Cargo.toml
apps/web/crates/platform-contracts/: Cargo.toml
apps/web/crates/platform-store/: Cargo.toml
apps/web/crates/profile-host/: Cargo.toml
apps/web/crates/profile-registry/: Cargo.toml
apps/web/crates/provider-service/: Cargo.toml
apps/web/crates/run-orchestrator/: Cargo.toml
apps/web/crates/secret-store/: Cargo.toml
apps/web/docs/: codebase-map.md  codex-capability-gap.md  development-baseline.md  tauri-migration-inventory.md  web-agent-platform-development-plan.md  web-agent-platform-prd.md
apps/web/docs/adr/: 0001-web-harness-and-fact-ownership.md  0002-persistent-codex-profile.md  0003-run-workspace-and-storage-isolation.md  README.md
apps/web/migrations/: 20260712000001_initial.sql  20260712000002_auth.sql  20260712000003_organizations.sql  20260712000004_run_events.sql  20260714000005_run_event_projection.sql  20260715100000_batch23_platform.sql  20260715110000_project_org_scope.sql  20260721000006_profiles_and_security.sql  20260721000007_git_runner.sql  20260722000008_browser_workspace_projection.sql  20260723000009_approval_runtime_request_scope.sql  20260723000010_approval_runtime_instance.sql  20260723000011_platform_configuration.sql  20260723000012_username_login.sql  20260723000013_platform_configuration_secrets.sql  20260723000014_model_selection.sql  20260724000015_thread_titles.sql  20260724000016_reply_artifacts.sql  20260724000017_inline_visualization_artifacts.sql  20260724000018_inline_visualization_thread_scope.sql  20260724000019_approval_answered_outcome.sql
apps/web/scripts/: check-codex-contracts.mjs  check-codex-generated.mjs  check-main-ui-parity.mjs  check-no-desktop.mjs  check-platform-batch23.mjs  check-platform-web.mjs  check-tauri-boundary.mjs  codex-app-server-smoke.mjs  fetch-codex-contracts.mjs  generate-codex-consumer-types.mjs  generate-codex-contract-bundle.mjs  platform-batch23-smoke.mjs  platform-web-smoke.mjs  real-platform-e2e.mjs  replay-codex-fixtures.mjs  test-codex-app-server-harness.mjs  test-codex-capability-manifest.mjs  test-feature-policy.mjs
apps/web/server/: Cargo.toml
apps/web/server/src/: access.rs  codex_workspace.rs  config.rs  event_projection.rs  git_workspace.rs  main.rs  map_reply_cards.rs  reply_cards.rs  run_lifecycle.rs  run_workspace_api.rs  security_integration.rs  supervisor.rs
apps/web/src/: PlatformWebApp.test.ts  PlatformWebApp.tsx  WebApp.test.tsx  WebApp.tsx  main.tsx  types.ts  vite-env.d.ts
apps/web/src-tauri/: Cargo.toml
apps/web/src-tauri/src/: daemon_protocol.rs  lib.rs  terminal_mobile.rs
apps/web/src/components/: Layout.test.tsx  Layout.tsx  PlatformAuthScreen.tsx
apps/web/src/platform/: PlatformApp.tsx  PlatformSessionGate.tsx  client.test.ts  client.ts  defaultSettings.ts  platform.css  types.ts
apps/web/src/services/: dragDrop.ts  events.test.ts  events.ts  mapsConfiguration.ts  platformClient.test.ts  platformClient.ts  platformTypes.ts  tauri.test.ts  tauri.ts  webClient.test.ts  webClient.ts
apps/web/src/styles/: approval-toasts.css  main.css  messages.css  web-composer.css  web-design-tokens.css  web-layout.css  web-modal.css  web-refactor.css  web.css
apps/web/src/types/: logEntry.ts
apps/web/src/utils/: appServerEvents.test.ts  appServerEvents.ts  approvalStatus.ts  inlineVisualizations.test.ts  inlineVisualizations.ts  modelCatalog.test.ts  modelCatalog.ts  parseUserInputFromApproval.test.ts  parseUserInputFromApproval.ts  platformWebAppHelpers.test.ts  platformWebAppHelpers.ts  projectedRunEventsToLogEntries.test.ts  projectedRunEventsToLogEntries.ts  projectedThreadEvents.test.ts  projectedThreadEvents.ts  providerText.ts  replyCards.test.ts  replyCards.ts  threadItems.conversion.ts  threadItems.explore.ts  threadItems.test.ts  threadItems.ts  tokenUsageFromRunEvents.test.ts  tokenUsageFromRunEvents.ts  webAppServerError.test.ts  webAppServerError.ts  webAppServerEventDedup.test.ts  webAppServerEventDedup.ts  webAppServerEventSummary.test.ts  webAppServerEventSummary.ts  webApprovalHistory.test.ts  webApprovalHistory.ts  webApprovalLog.test.ts  webApprovalLog.ts  webInitialStatus.test.ts  webInitialStatus.ts  webInterruptedTurn.test.ts  webInterruptedTurn.ts  webThreadHistory.test.ts  webThreadHistory.ts  (+4 more)
tools/maps-mcp/: .mcp.json  README.md  pyproject.toml
tools/maps-mcp/.codex-plugin/: plugin.json
tools/maps-mcp/maps_mcp/: __init__.py  clients.py  credential_prompt.py  credentials.py  data_refs.py  http.py  server.py
tools/maps-mcp/skills/map-utils/: SKILL.md
tools/maps-mcp/skills/workspace-maps/: SKILL.md
tools/maps-mcp/tests/: test_clients.py  test_credential_prompt.py  test_credentials.py  test_http.py  test_map_card.py  test_plugin_config.py  test_server_credentials.py
(+485 files in other folders)
