[workspace]
resolver = "2"
members = [
    "crates/codex-adapter",
    "crates/codex-contracts",
    "crates/profile-host",
    "crates/platform-contracts",
    "crates/platform-store",
    "server",
    "src-tauri",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.9", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "macros",
    "migrate",
] }
 clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
hex = "0.4"
rand = "0.8"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["json", "stream"] }
libc = "0.2"
