[package]
name = "open-web-codex-adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
open-web-codex-profile-host = { path = "../profile-host" }

serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
async-trait = "0.1"
tracing = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
