[package]
name = "open-web-codex-git-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
url.workspace = true
uuid.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
tempfile.workspace = true
