[package]
name = "open-web-codex-platform-store"
version = "0.1.0"
edition = "2021"

[dependencies]
open-web-codex-platform-contracts = { path = "../platform-contracts" }

serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
sqlx.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
