[package]
name = "open-web-codex-profile-host"
version = "0.1.0"
edition = "2021"

[dependencies]
open-web-codex-codex-contracts = { path = "../codex-contracts" }

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true
